--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-dotenv": "^3.4.8"
+    "react-native-dotenv": "^3.4.8",
+    "react-native-safe-area-context": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
