--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./__mocks__/@react-native-async-storage/jestSetupFile.js"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@testing-library/react-native": "^12.1.2",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
@@ -22,7 +30,9 @@
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.1.1",
+    "jest-expo": "^48.0.2"
   },
   "private": true
 }
